<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fond2"
    android:focusable="auto"
    android:foregroundGravity="clip_horizontal|center|clip_vertical|fill"
    tools:context=".vue.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10sp"
                android:text="@string/version"
                android:textColor="#EFEEEE"
                android:textColorHint="#370A0A"
                android:textSize="18sp"
                android:textStyle="bold" /><![CDATA[









            >




        ]]>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/hexadecimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal|center_vertical|fill_vertical"
                    android:gravity="center_horizontal"
                    android:text="@string/decimal"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp"
                    android:textStyle="bold|italic" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/valeur_decimal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:hint="@string/valeur_decimale"
                        android:inputType="numberDecimal"
                        android:paddingTop="1sp"
                        android:textColor="#673AB7"
                        android:textColorHint="#673AB7"
                        android:textSize="24sp"
                        android:textStyle="bold|italic" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    >

                    <Button
                        android:id="@+id/convertir_decimal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="0sp"
                        android:layout_weight="1"
                        android:background="@drawable/shape_btn"
                        android:text="@string/btn_convertir_decimal"
                        android:textStyle="italic" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/effacer_decimal"
                    android:layout_width="wrap_content"
                    android:layout_height="35sp"
                    android:layout_marginStart="10sp"
                    android:layout_marginLeft="10sp"
                    android:gravity="center|center_horizontal"
                    android:paddingTop="0sp"
                    android:paddingBottom="0sp"
                    android:text="clear" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/binaire"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/binaire"
                    android:textColor="@color/white"
                    android:textColorHighlight="#FAFAFA"
                    android:textColorHint="#FFFFFF"
                    android:textSize="24sp"
                    android:textStyle="bold|italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/valeur_hexadecimal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/valeur_binaire"
                        android:inputType="numberDecimal"
                        android:paddingTop="1sp"
                        android:textColor="#673AB7"
                        android:textColorHint="#673AB7"
                        android:textSize="24sp"
                        android:textStyle="bold|italic" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/convertir_hexadecimal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="0sp"
                        android:layout_weight="1"

                        android:text="@string/btn_convertir_hexadecimal"
                        android:textStyle="italic" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/effacer_hexadecimal"
                    android:layout_width="wrap_content"
                    android:layout_height="35sp"
                    android:layout_marginStart="10sp"
                    android:layout_marginLeft="10sp"
                    android:paddingTop="0sp"
                    android:paddingBottom="0sp"
                    android:text="clear" />
            </LinearLayout>

            <TextView
                android:id="@+id/valeur_resultat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center|center_horizontal"
                android:text="@string/result"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/page2"
                            android:layout_width="40sp"
                            android:layout_height="40sp"
                            android:layout_marginStart="10sp"
                            android:layout_marginLeft="10sp"
                            android:layout_weight="1"
                            android:text="Home" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal"></LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/page3"
                            android:layout_width="40sp"
                            android:layout_height="40sp"
                            android:layout_weight="1"
                            android:text="page3" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>